# math_logic_hw

./: .gitignore  README.md  in  main.cpp  main2.cpp
problem1/: .checkOnFalse.cpp.swp  .deduction.cpp.swp  .main.cpp.swo  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  deduction.cpp  deduction.h  main  main.cpp
problem2/: .checkOnFalse.cpp.swo  .main.cpp.swn  .parser.cpp.swp  CMakeCache.txt  CMakeLists.txt  Makefile  checkOnFalse.cpp  cmake_install.cmake  deduction.cpp  main  main.cpp  out  parser.cpp
problem2/axioms/: not
problem2/headers/: .parser.h.swp  checkOnFalse.h  deduction.h  parser.h
task1/: .in.swj  .in.swk  .in.swn  .in.swo  .in.swp  .main.cpp.swo  .main.cpp.swp  .out.swo  .out.swp  .parser.cpp.swp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  in  main  main.cpp  out  parser.cpp  parser.h
task1/HW1/: task1  test.sh
task1/project/: .in.swo  .in.swp  .out.swp  CMakeCache.txt  Makefile  cmake_install.cmake  in  main  out
task2/: .CMakeLists.txt.swp  .deduction.cpp.swo  .deduction.cpp.swp  .deduction.h.swo  .deduction.h.swp  .in.swp  .main.cpp.swp  .out.swp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  deduction  deduction.cpp  deduction.h  deduction2.cpp  in  main  main.cpp  out  parser  parser.cpp  parser.h  temp
task2/HW2/: in  test.sh
task2/project/: .out.swp  CMakeCache.txt  Makefile  cmake_install.cmake  in  in2  main  out
task3/: .checkOnFalse.cpp.swp  .deduction.cpp.swp  .in.swo  .in.swp  .main.cpp.swo  .main.cpp.swp  .out.swl  .out.swm  .out.swn  .out.swo  .out.swp  .parser.h.swp  .swp  Axioms  CMakeCache.txt  CMakeLists.txt  Makefile  checkOnFalse.cpp  checkOnFalse.h  cmake_install.cmake  deduction.cpp  deduction.h  in  main  main.cpp  out  parser.cpp  parser.h
task3/HW3/: demorgan  in  peirce.in  temp  temp2  test.sh
task3/axioms/: and  contraposition  implication  temp
task3/headers/: .deduction.h.swp  checkOnFalse.h  deduction.h
task3/project/: in  main  out
task3/project/axioms/: .swp
task3_/: CMakeCache.txt  CMakeLists.txt  Makefile  checkOnFalse.cpp  cmake_install.cmake  deduction.cpp  in  main  main.cpp  out  perf.data  perf.data.old
task3_/axioms/: .implication.swp  or
task3_/headers/: checkOnFalse.h  deduction.h
task3_/project/: CMakeCache.txt  Makefile  cmake_install.cmake  in  main
task4/: CMakeLists.txt  Makefile  deduction.cpp  deduction.h  main.cpp  parser.cpp  parser.h  test.sh  tests.cpp  tree.cpp  tree.h
task4/resources/: in
task4/resources/axioms/: AandBC_abc  abc_AandBC  abc_bac  base_axioms  base_formal_axioms
task5/: CMakeLists.txt  Makefile  kripke.cpp  kripke.h  main.cpp  parser.cpp  parser.h  tree.cpp  tree.h
task5/resources/: in
task8/: CMakeLists.txt  Makefile  main.cpp
